syntax = "proto3";

package ssn.dataservice.v1alpha1;

option go_package = "dataservice";

import "protoc-gen-bq-schema/bq_field.proto";
import "protoc-gen-bq-schema/bq_table.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/type/date.proto";
import "ssn/type/text_annotation.proto";

service DataService {
  rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse);
  rpc ReadDocument(ReadDocumentRequest) returns (ReadDocumentResponse);
  // For feedback
  rpc PrepareFeedback(PrepareFeedbackRequest) returns (google.protobuf.Empty);
  rpc Feedback(FeedbackRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/feedback"
      body: "*"
    };
  }
}

message Document {
  option (gen_bq_schema.bigquery_opts).table_name = "training_data";
  ssn.type.TextAnnotation ta = 1 [(gen_bq_schema.bigquery).ignore = true];
  bytes bytes = 2 [(gen_bq_schema.bigquery).ignore = true];
  string id = 3 [(gen_bq_schema.bigquery).require = true, (gen_bq_schema.bigquery).description = "Feedback ID, same as Envoy request id"];
  string consumer = 4 [(gen_bq_schema.bigquery).require = true];
  repeated string tags = 5 [(gen_bq_schema.bigquery).description = "Tags defined by consumer, enriched by service if valetkey is used"];
  TrueValues true_values = 6;
  repeated string missing_values = 7;
}

message TrueValues {
  google.protobuf.DoubleValue total_incl_vat = 1;
  google.protobuf.DoubleValue total_vat = 2;
  google.protobuf.DoubleValue total_excl_vat = 3;
  google.type.Date order_date = 4 [(gen_bq_schema.bigquery).type_override = "DATE"];
  google.type.Date payment_due_date = 5 [(gen_bq_schema.bigquery).type_override = "DATE"];
  google.protobuf.StringValue document_type = 6;
  google.protobuf.StringValue currency = 7;
  google.protobuf.StringValue credit_card_last_four = 8;
  google.protobuf.StringValue payment_method = 9;
  google.protobuf.StringValue ocr_line_dk_type = 10;
  google.protobuf.StringValue ocr_line_dk_payment_id = 11;
  google.protobuf.StringValue ocr_line_dk_creditor_id = 12;
  google.protobuf.StringValue ocr_line_se_payment_id = 13;
  google.protobuf.StringValue ocr_line_se_bankgiro_creditor_id = 14;
  google.protobuf.StringValue ocr_line_se_plusgiro_creditor_id = 15;
  google.protobuf.StringValue ocr_line_no_payment_id = 16;
  google.protobuf.StringValue ocr_line_fi_payment_id = 17;
  google.protobuf.StringValue ocr_line_nl_payment_id = 18;
  google.protobuf.StringValue supplier_corporate_id = 19;
  google.protobuf.StringValue supplier_country_code = 20;
  google.protobuf.StringValue invoice_number = 21;
}

message CreateDocumentRequest {
  Document document = 1;
}

message CreateDocumentResponse {
  string id = 1;
}

message ReadDocumentRequest {
  string id = 1;
}

message ReadDocumentResponse {
  Document document = 1;
}

message PrepareFeedbackRequest {
  string id = 1;
  ssn.type.TextAnnotation ta = 2;
  bytes document_bytes = 3;
}

message FeedbackRequest {
  string id = 1;
  TrueValues true_values = 2;
  repeated string tags = 3;
}
